--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Check and Build
 
 env:
   kernel_repository: EndCredits/android_kernel_xiaomi_sm8350
-  kernel_branch: lineage-21
+  kernel_branch: 14-rebase
   device: renoir
   clang_version: r416183b
   defconfig: |
