--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,8 @@ env:
   device: renoir
   clang_version: r416183b
   defconfig: |
-    gki_defconfig
+    defconfig
     vendor/renoir_QGKI.config
-  kernel_patch: |
-    allow-init-exec-ksud-under-nosuid.patch
-    backport-path-umount.patch
   kernelsu_patch: |
 
 on:
